// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/skeleton/demo/active.md correctly 1`] = `
<div
  class="infini-skeleton infini-skeleton-active"
>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width:38%"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/basic.md correctly 1`] = `
<div
  class="infini-skeleton"
>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width:38%"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/children.md correctly 1`] = `
<div
  class="article"
>
  <div>
    <h4>
      Ant Design, a design language
    </h4>
    <p>
      We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
    </p>
  </div>
  <button
    class="infini-btn"
    type="button"
  >
    <span>
      Show Skeleton
    </span>
  </button>
</div>
`;

exports[`renders ./components/skeleton/demo/complex.md correctly 1`] = `
<div
  class="infini-skeleton infini-skeleton-with-avatar"
>
  <div
    class="infini-skeleton-header"
  >
    <span
      class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-circle"
    />
  </div>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width:50%"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/list.md correctly 1`] = `
<div>
  <button
    aria-checked="false"
    class="infini-switch"
    role="switch"
    type="button"
  >
    <span
      class="infini-switch-inner"
    />
  </button>
  <div
    class="infini-list infini-list-vertical infini-list-lg infini-list-split"
  >
    <div
      class="infini-spin-nested-loading"
    >
      <div
        class="infini-spin-container"
      >
        <div
          class="infini-list-item infini-list-item-no-flex"
        >
          <div
            class="infini-skeleton infini-skeleton-with-avatar infini-skeleton-active"
          >
            <div
              class="infini-skeleton-header"
            >
              <span
                class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-circle"
              />
            </div>
            <div
              class="infini-skeleton-content"
            >
              <h3
                class="infini-skeleton-title"
                style="width:50%"
              />
              <ul
                class="infini-skeleton-paragraph"
              >
                <li />
                <li />
              </ul>
            </div>
          </div>
        </div>
        <div
          class="infini-list-item infini-list-item-no-flex"
        >
          <div
            class="infini-skeleton infini-skeleton-with-avatar infini-skeleton-active"
          >
            <div
              class="infini-skeleton-header"
            >
              <span
                class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-circle"
              />
            </div>
            <div
              class="infini-skeleton-content"
            >
              <h3
                class="infini-skeleton-title"
                style="width:50%"
              />
              <ul
                class="infini-skeleton-paragraph"
              >
                <li />
                <li />
              </ul>
            </div>
          </div>
        </div>
        <div
          class="infini-list-item infini-list-item-no-flex"
        >
          <div
            class="infini-skeleton infini-skeleton-with-avatar infini-skeleton-active"
          >
            <div
              class="infini-skeleton-header"
            >
              <span
                class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-circle"
              />
            </div>
            <div
              class="infini-skeleton-content"
            >
              <h3
                class="infini-skeleton-title"
                style="width:50%"
              />
              <ul
                class="infini-skeleton-paragraph"
              >
                <li />
                <li />
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
